add unsplash api

--- a/cheerspal/src/main/resources/templates/admin.html
+++ b/cheerspal/src/main/resources/templates/admin.html
@@ -113,7 +113,7 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Status</th> <!-- Added status column for reported events -->
+                            <th>Status</th>
                             <th>Event Title</th>
                             <th>Event Description</th>
                             <th>Date</th>
