--- a/cheerspal/src/main/resources/templates/Index.html
+++ b/cheerspal/src/main/resources/templates/Index.html
@@ -115,28 +115,33 @@
         <div th:if="${session.loggedInUser == null}">
             <p>Please <a href="/login">login</a> to continue.</p>
         </div>
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="container px-5 px-lg-6">
+            <div class="row gx-5 justify-content-center">
+                <div class="col-md-12 col-lg-10 col-xl-9">                
                     <!-- Post preview-->
                     <h1 class="mb-4">Upcoming Events</h1>
-                    <div th:if="${events != null}">
-                        <div th:each="event : ${events}">
-                            
-                            <div class="post-preview">
-                                <a th:href="@{/post_event/event_details(id=${event.id})}">
-                                    <h2 class="post-title" th:text="${event.title}">Event Title</h2>
-                                    <h3 class="post-subtitle" th:text="${event.description}">Event Description</h3>
-                                </a>
-                                <p class="post-meta">
-                                    Scheduled on
-                                    <span th:text="${event.date}">Event Date</span>
-                                </p>
-                            </div>
-                            
+                        <div th:if="${events != null}">
+                            <div th:each="event : ${events}">
+                                <div class="post-preview d-flex align-items-center">
+                                    
+                                    <div class="event-image">
+                                        <img th:src="@{${event.imageUrl}}" alt="Event Image" class="img-fluid" />
+                                    </div>
+
+                                    <div class="event-details ms-3">
+                                        <a th:href="@{/post_event/event_details(id=${event.id})}">
+                                            <h2 class="post-title" th:text="${event.title}">Event Title</h2>
+                                            <h5 class="post-subtitle" th:text="${event.description}">Event Description</h5>
+                                        </a>
+                                        <p class="post-meta">
+                                            Scheduled on
+                                            <span th:text="${event.date}">Event Date</span>
+                                        </p>
+                                    </div>
+                                </div>
                             <hr class="my-4" />
+                            </div>
                         </div>
-                    </div>
 
                     <div th:if="${events == null}">
                         <p>No upcoming events found.</p>
