--- a/cheerspal/src/main/resources/templates/profile.html
+++ b/cheerspal/src/main/resources/templates/profile.html
@@ -18,7 +18,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
-        <title>Cheers Pal - Profile</title>
+        <title>Cheers Pal - My Profile</title>
     </head>
     <body>
         <!-- Navigation-->
