add comment function

--- a/cheerspal/src/main/resources/templates/Index.html
+++ b/cheerspal/src/main/resources/templates/Index.html
@@ -125,7 +125,7 @@
                                 <div class="post-preview d-flex align-items-center">
                                     
                                     <div class="event-image">
-                                        <img th:src="@{${event.imageUrl}}" alt="Event Image" class="img-fluid" />
+                                        <img th:src="@{${event.imageUrl}}" alt="Event Image" class="img-fluid event-img" />
                                     </div>
 
                                     <div class="event-details ms-3">
